# bevy_webcam_facial

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO
.github/workflows/: rust.yml
Test/: test.txt  test2.txt
assets/: rooster.gltf
assets/NN_Models/: LICENSE  README.md
examples/: camera_control.rs  kalman filter.rs  neck_trainer.rs  object_mover.rs
src/: filter.rs  lib.rs
