[package]
name = "bevy_webcam_facial"
version = "0.1.0"
description = "Webcam AI face recognition plugin for bevy game engine"
authors = ["Andrius Kokianciks <andrius.kokianciks@gmail.com>"]
license = "MIT/Apache-2.0"
#repository = "https://github.com/idanarye/bevy-tnua"
#documentation = "https://docs.rs/bevy-tnua"
readme = "README.md"
categories = ["game-development"]
keywords = ["bevy", "webcam", "face recognition", "webcam controller"]
edition = "2021"

[dependencies]
bevy = { version = "^0.11" }
crossbeam-channel ="0.5.8"
rscam = "0.5.5"
rustface = "0.1.7"
image = "0.24.6"

[dev_dependencies]
bevy-scene-hook = "7.0.0"
bevy_mod_interp = { path = "examples/bevy_mod_interp" }


[[example]]
name = "object_mover"
path = "examples/object_mover.rs"

[[example]]
name = "camera_control"
path = "examples/camera_control.rs"

[[example]]
name = "neck_trainer"
path = "examples/neck_trainer.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for dependencies:
[profile.release]
opt-level = 3
