[package]
name = "bevy_webcam_facial"
version = "0.1.4"
description = "Webcam AI face recognition plugin for bevy game engine"
authors = ["Andrius Kokianciks <andrius.kokianciks@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/muaddibus/bevy_webcam_facial"
readme = "README.md"
categories = ["game-engines"]
keywords = ["bevy", "webcam", "recognition", "face"]
edition = "2021"

[dependencies]
bevy = { version = "^0.12", default-features = false, features = [
    "multi-threaded",
] }
futures-lite = "2.0.1"
crossbeam-channel = "0.5.8"
rustface = "0.1.7"
camera_capture = "0.5.0"
image = "0.24.7"

[dev_dependencies]
bevy = { version = "^0.12" }
bevy-scene-hook = "9.0.0"

[[example]]
name = "object_mover"
path = "examples/object_mover.rs"

[[example]]
name = "camera_control"
path = "examples/camera_control.rs"

[[example]]
name = "neck_trainer"
path = "examples/neck_trainer.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for dependencies:
[profile.release]
opt-level = 3
